RESOLVED FIXED19538
Reading transition property from the style JS gives the wrong value
https://bugs.webkit.org/show_bug.cgi?id=19538
Summary Reading transition property from the style JS gives the wrong value
Darin Adler
Reported 2008-06-13 10:59:27 PDT
When setting webkitTransitionProperty = "height" it ends up with the value 'extra-condensed'. Similarly, setting it to "opacity" ends up with 'gray'.
Attachments
patch (10.17 KB, patch)
2008-06-13 11:03 PDT, Darin Adler
no flags
patch (8.19 KB, patch)
2008-06-13 11:24 PDT, Darin Adler
mjs: review+
Darin Adler
Comment 1 2008-06-13 11:03:14 PDT
Darin Adler
Comment 2 2008-06-13 11:24:50 PDT
Maciej Stachowiak
Comment 3 2008-06-13 14:58:14 PDT
Comment on attachment 21684 [details] patch r=me
Darin Adler
Comment 4 2008-06-14 18:04:34 PDT
<rdar://problem/5957595> Committed revision 34542.
Note You need to log in before you can comment on or make changes to this bug.