WebCore:

2008-06-14  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - fix https://bugs.webkit.org/show_bug.cgi?id=19538
          <rdar://problem/5957595> Reading transition property from the style JS gives the wrong value

        Test: fast/dom/CSSStyleDeclaration/transition-property-names.html

        * css/CSSPrimitiveValue.cpp:
        (WebCore::valueOrPropertyName): Added.
        (WebCore::CSSPrimitiveValue::getStringValue): Use valueOrPropertyName since the ident can either
        be a value or property ID.
        (WebCore::CSSPrimitiveValue::cssText): Ditto.

        * css/makeprop.pl: Assign property IDs starting at 1001 instead of 1 so they can be stored along
        with value IDs with no ambiguity.

LayoutTests:

2008-06-14  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - test for https://bugs.webkit.org/show_bug.cgi?id=19538
          <rdar://problem/5957595> Reading transition property from the style JS gives the wrong value

        * fast/dom/CSSStyleDeclaration/resources/transition-property-names.js: Added.
        * fast/dom/CSSStyleDeclaration/transition-property-names-expected.txt: Added.
        * fast/dom/CSSStyleDeclaration/transition-property-names.html: Added.



Canonical link: https://commits.webkit.org/26991@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@34542 268f45cc-cd09-0410-ab3c-d52691b4dbfc